5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1723_2498.log
== SUBMITION (2019-05-09 11:27:36) 
-- CODE:
a = int(input("cidade a:"))
b = int(input("cdade b:"))
pa = float(input("percentual a:"))
pb = float(input("percentual b:"))
percA = pa/100
percB = pb/100
ano = 0
while(a < b):
	a = a+(a*percA)
	b = b+(b*perceB)
	ano = ano + 1
print(ano)
-- EXECUTION TIME:
0.146559
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 10, in <module>
    b = b+(b*perceB)
NameError: name 'perceB' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:48) 
-- CODE:
a = int(input("cidade a:"))
b = int(input("cdade b:"))
pa = float(input("percentual a:"))
pb = float(input("percentual b:"))
percA = pa/100
percB = pb/100
ano = 0
while(a < b):
	a = a+(a*percA)
	b = b+(b*percB)
	ano = ano + 1
print(ano)
-- EXECUTION TIME:
0.196091
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
